# bluefish

./: .gitignore  CMakeLists.txt  README.md
app/: bench.cpp  bench_parallel.cpp  experiment.cpp  solve.cpp
include/bluefish/: abstraction.h  cfr.h  cfr_plus.h  fast_cfr.h  flat_game.h  game.h  kuhn.h  leduc.h  mccfr.h  parallel_mccfr.h  solver.h
src/: abstraction.cpp  cfr.cpp  cfr_plus.cpp  fast_cfr.cpp  flat_game.cpp  mccfr.cpp  parallel_mccfr.cpp  solver.cpp
tests/: test_abstraction.cpp  test_algorithms.cpp  test_kuhn_cfr.cpp  test_leduc.cpp  test_parallel.cpp
